fix: align w figma

--- a/packages/wallets/src/features/cashier/modules/Transfer/components/TransferFormDropdown/TransferFormDropdown.scss
+++ b/packages/wallets/src/features/cashier/modules/Transfer/components/TransferFormDropdown/TransferFormDropdown.scss
@@ -15,7 +15,11 @@
         display: flex;
         flex-direction: column;
         flex: 1;
-        gap: 0.4rem;
+        gap: 0.2rem;
+
+        @include mobile {
+            gap: 0.4rem;
+        }
     }
 
     &__header {
@@ -24,6 +28,13 @@
 
         @include mobile {
             justify-content: space-between;
+        }
+    }
+
+    &__select-account-cta {
+        @include mobile {
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
         }
     }
 
